Added minimal SDL_sound source files.

--- a/visualc_net/dosbox.vcxproj
+++ b/visualc_net/dosbox.vcxproj
@@ -362,6 +362,7 @@
     <ClCompile Include="..\src\gui\display2.cpp" />
     <ClCompile Include="..\src\gui\xBRZ\xbrz.cpp" />
     <ClCompile Include="..\src\fpu\fpu.cpp" />
+    <ClCompile Include="..\src\longplays\SDL_sound-r596\SDL_sound.c" />
     <ClCompile Include="..\src\save_state.cpp" />
     <ClCompile Include="..\src\miniunz.c" />
     <ClCompile Include="..\src\minizip.c" />
@@ -688,6 +689,8 @@
     <ClInclude Include="..\src\libs\gui_tk\gui_tk.h" />
     <ClInclude Include="..\src\libs\porttalk\porttalk.h" />
     <ClInclude Include="..\src\libs\porttalk\PortTalk_IOCTL.h" />
+    <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound.h" />
+    <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound_internal.h" />
     <ClInclude Include="..\src\platform\visualc\config.h" />
     <ClInclude Include="..\src\platform\visualc\ntddcdrm.h" />
     <ClInclude Include="..\src\platform\visualc\ntddscsi.h" />
