--- a/visualc_net/dosbox.vcxproj.filters
+++ b/visualc_net/dosbox.vcxproj.filters
@@ -72,6 +72,12 @@
       <UniqueIdentifier>{376e3016-7ee8-48cc-ae73-c063140419c0}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
     </Filter>
+    <Filter Include="Source Files\longplays">
+      <UniqueIdentifier>{55e459e5-4df6-4134-bb10-0fec0544855a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\longplays\SDL_sound">
+      <UniqueIdentifier>{7dddc4a6-6a0d-4943-8adf-9095a3b59832}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dosbox.cpp">
@@ -643,6 +649,9 @@
     </ClCompile>
     <ClCompile Include="..\src\libs\porttalk\porttalk.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\longplays\SDL_sound-r596\SDL_sound.c">
+      <Filter>Source Files\longplays\SDL_sound</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1271,6 +1280,12 @@
     </ClInclude>
     <ClInclude Include="..\src\save_state.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound.h">
+      <Filter>Source Files\longplays\SDL_sound</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound_internal.h">
+      <Filter>Source Files\longplays\SDL_sound</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
