Added zlib source files from PhysicsFS.

--- a/visualc_net/dosbox.vcxproj
+++ b/visualc_net/dosbox.vcxproj
@@ -367,6 +367,18 @@
     <ClCompile Include="..\src\longplays\physfs-2.0.3\physfs_byteorder.c" />
     <ClCompile Include="..\src\longplays\physfs-2.0.3\physfs_unicode.c" />
     <ClCompile Include="..\src\longplays\physfs-2.0.3\platform\windows.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\adler32.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\compress.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\crc32.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\deflate.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\gzio.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\infback.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\inffast.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\inflate.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\inftrees.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\trees.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\uncompr.c" />
+    <ClCompile Include="..\src\longplays\physfs-2.0.3\zlib123\zutil.c" />
     <ClCompile Include="..\src\longplays\SDL_sound-r596\audio_convert.c" />
     <ClCompile Include="..\src\longplays\SDL_sound-r596\SDL_sound.c" />
     <ClCompile Include="..\src\save_state.cpp" />
@@ -699,6 +711,16 @@
     <ClInclude Include="..\src\longplays\physfs-2.0.3\physfs_casefolding.h" />
     <ClInclude Include="..\src\longplays\physfs-2.0.3\physfs_internal.h" />
     <ClInclude Include="..\src\longplays\physfs-2.0.3\physfs_platforms.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\crc32.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\deflate.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\inffast.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\inffixed.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\inflate.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\inftrees.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\trees.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\zconf.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\zlib.h" />
+    <ClInclude Include="..\src\longplays\physfs-2.0.3\zlib123\zutil.h" />
     <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound.h" />
     <ClInclude Include="..\src\longplays\SDL_sound-r596\SDL_sound_internal.h" />
     <ClInclude Include="..\src\platform\visualc\config.h" />
