--- a/visualc_net/dosbox.vcxproj.filters
+++ b/visualc_net/dosbox.vcxproj.filters
@@ -1471,4 +1471,9 @@
   <ItemGroup>
     <Image Include="..\src\dosbox.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\src\longplays\copy_dlls.bat">
+      <Filter>Source Files\longplays</Filter>
+    </None>
+  </ItemGroup>
 </Project>
