Generate debug info.

--- a/visualc_net/dosbox.vcxproj
+++ b/visualc_net/dosbox.vcxproj
@@ -113,7 +113,7 @@
       <AdditionalDependencies>Iphlpapi.lib;dinput8.lib;dxguid.lib;dsound.lib;opengl32.lib;sdl_net.lib;winmm.lib;sdlmain.lib;sdl.lib;pdcurses.lib;odbc32.lib;odbccp32.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/dosbox.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/dosbox.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
@@ -153,7 +153,7 @@
       <AdditionalDependencies>libintl.lib;Iphlpapi.lib;tbb.lib;dinput8.lib;dxguid.lib;gthread-2.0.lib;glib.lib;dsound.lib;opengl32.lib;sdl_net.lib;winmm.lib;zlib.lib;libpng.lib;sdlmain.lib;sdl.lib;pdcurses.lib;odbc32.lib;odbccp32.lib;ws2_32.lib;libfluidsynth-1.lib;libfreetype-6.lib;libphysfs.lib;SDL_sound.lib;wpcap.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/dosbox.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/dosbox.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
       <LargeAddressAware>true</LargeAddressAware>
@@ -205,7 +205,7 @@
       <AdditionalDependencies>Iphlpapi.lib;dinput8.lib;dxguid.lib;dsound.lib;opengl32.lib;sdl_net.lib;winmm.lib;sdlmain.lib;sdl.lib;pdcurses.lib;odbc32.lib;odbccp32.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/dosbox.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile />
       <GenerateMapFile>false</GenerateMapFile>
       <SubSystem>Console</SubSystem>
