--- a/src/longplays/longplays.props
+++ b/src/longplays/longplays.props
@@ -11,6 +11,9 @@
       <Command>$(SolutionDir)..\src\longplays\copy_dlls.bat $(OutDir)</Command>
       <Message>Copying DLLs</Message>
     </PostBuildEvent>
+    <ClCompile>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
