Added Python 3 script to generate AviSynth script from capture list.

--- a/visualc_net/dosbox.vcxproj.filters
+++ b/visualc_net/dosbox.vcxproj.filters
@@ -1472,5 +1472,11 @@
     <None Include="..\src\longplays\copy_dlls.bat">
       <Filter>Source Files\longplays</Filter>
     </None>
+    <None Include="..\src\longplays\build_avs.py">
+      <Filter>Source Files\longplays</Filter>
+    </None>
+    <None Include="..\src\longplays\build_avs.bat">
+      <Filter>Source Files\longplays</Filter>
+    </None>
   </ItemGroup>
 </Project>
