--- a/visualc_net/dosbox.vcxproj
+++ b/visualc_net/dosbox.vcxproj
@@ -752,6 +752,8 @@
     <Image Include="..\src\dosbox.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\src\longplays\build_avs.bat" />
+    <None Include="..\src\longplays\build_avs.py" />
     <None Include="..\src\longplays\copy_dlls.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
