Disable LTCG for linker to prevent warning.

--- a/src/longplays/longplays.props
+++ b/src/longplays/longplays.props
@@ -18,6 +18,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
