Put .lib and .exp files in intermediate directory.
They don't need to go in a release.

--- a/src/longplays/longplays.props
+++ b/src/longplays/longplays.props
@@ -19,6 +19,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
+      <ImportLibrary>$(IntDir)$(TargetName).lib</ImportLibrary>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
