--- a/visualc_net/dosbox.vcxproj
+++ b/visualc_net/dosbox.vcxproj
@@ -718,7 +718,7 @@
   <ItemGroup>
     <None Include="..\src\longplays\build_avs.bat" />
     <None Include="..\src\longplays\build_avs.py" />
-    <None Include="..\src\longplays\copy_dlls.bat" />
+    <None Include="..\src\longplays\build_release.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
