Reworked save system to be able to save and load any slot at any time.
F1 through F10 = Load state slot.
Alt+F1 through F10 = Save state slot.

--- a/src/winres.rc
+++ b/src/winres.rc
@@ -18,31 +18,31 @@ BEGIN
 		MENUITEM "Autolock Mouse",			ID_AUTOLOCK
 		MENUITEM "Pause\tAlt-Pause",		ID_PAUSE
 		MENUITEM SEPARATOR
-		POPUP "Save State\tAlt-F5"
+		POPUP "Save State"
 		    BEGIN
-  		    MENUITEM "1", ID_SAVESTATE_1
-  		    MENUITEM "2", ID_SAVESTATE_2
-   		    MENUITEM "3", ID_SAVESTATE_3
-  		    MENUITEM "4", ID_SAVESTATE_4
-   		    MENUITEM "5", ID_SAVESTATE_5
-  		    MENUITEM "6", ID_SAVESTATE_6
-   		    MENUITEM "7", ID_SAVESTATE_7
-  		    MENUITEM "8", ID_SAVESTATE_8
-   		    MENUITEM "9", ID_SAVESTATE_9
-  		    MENUITEM "10", ID_SAVESTATE_10
+  		    MENUITEM "1\tAlt-F1", ID_SAVESTATE_1
+  		    MENUITEM "2\tAlt-F2", ID_SAVESTATE_2
+   		    MENUITEM "3\tAlt-F3", ID_SAVESTATE_3
+  		    MENUITEM "4\tAlt-F4", ID_SAVESTATE_4
+   		    MENUITEM "5\tAlt-F5", ID_SAVESTATE_5
+  		    MENUITEM "6\tAlt-F6", ID_SAVESTATE_6
+   		    MENUITEM "7\tAlt-F7", ID_SAVESTATE_7
+  		    MENUITEM "8\tAlt-F8", ID_SAVESTATE_8
+   		    MENUITEM "9\tAlt-F9", ID_SAVESTATE_9
+  		    MENUITEM "10\tAlt-F10", ID_SAVESTATE_10
 		    END
-		POPUP "Load State\tAlt-F9"
+		POPUP "Load State"
 		    BEGIN
-  		    MENUITEM "1", ID_LOADSTATE_1
-  		    MENUITEM "2", ID_LOADSTATE_2
-   		    MENUITEM "3", ID_LOADSTATE_3
-  		    MENUITEM "4", ID_LOADSTATE_4
-   		    MENUITEM "5", ID_LOADSTATE_5
-  		    MENUITEM "6", ID_LOADSTATE_6
-   		    MENUITEM "7", ID_LOADSTATE_7
-  		    MENUITEM "8", ID_LOADSTATE_8
-   		    MENUITEM "9", ID_LOADSTATE_9
-  		    MENUITEM "10", ID_LOADSTATE_10
+  		    MENUITEM "1\tF1", ID_LOADSTATE_1
+  		    MENUITEM "2\tF2", ID_LOADSTATE_2
+   		    MENUITEM "3\tF3", ID_LOADSTATE_3
+  		    MENUITEM "4\tF4", ID_LOADSTATE_4
+   		    MENUITEM "5\tF5", ID_LOADSTATE_5
+  		    MENUITEM "6\tF6", ID_LOADSTATE_6
+   		    MENUITEM "7\tF7", ID_LOADSTATE_7
+  		    MENUITEM "8\tF8", ID_LOADSTATE_8
+   		    MENUITEM "9\tF9", ID_LOADSTATE_9
+  		    MENUITEM "10\tF10", ID_LOADSTATE_10
 		    END
 		POPUP "Remove state"
 		    BEGIN
